[tool.poetry]
name = "torchaudio-filters"
version = "0.1.0"
description = ""
authors = ["BlakeJC94 <blakejamescook@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torchaudio = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
scipy = "^1.12.0"
plotly = "^5.19.0"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
